# FI-research

./: .gitignore  HANDOVER.md  README.md  pyproject.toml
.claude/: settings.json
docs/: data_catalog.md  data_sources.md  handover.md  reading_guide.html  research_overview.html
docs/catalog/: catalog_meta.yaml  data_catalog.html
projects/00_exploration/: README.md
projects/00_exploration/notebooks/: 01_macro_credit_state.ipynb  02_a1_shap_sketch.ipynb  03_a2_robeco_replication.ipynb
projects/a2_main/: README.md  plan.md
projects/a2_main/scripts/: step1_mp_regime_exposure.py  step2_alpha_test.py  step3_fgx_lasso.py
projects/derivatives/: README.md  build_notebooks.py
projects/derivatives/a_robeco_credit_pc/: README.md
projects/derivatives/a_robeco_credit_pc/notebooks/: 01_credit_pc_orth.ipynb  02_stress_drawdowns.ipynb
projects/derivatives/b_post_qe_structural/: README.md
projects/derivatives/c_mps_credit_transmission/: README.md
projects/replications/: README.md  _nb_builder.py  build_notebooks.py
projects/replications/bauer_swanson_2023/: README.md
projects/replications/cochrane_piazzesi_2005/: README.md
projects/replications/gilchrist_zakrajsek_2012/: README.md
projects/replications/gurkaynak_sack_wright_2007/: README.md
projects/replications/houweling_vanzundert_2017/: README.md
projects/replications/ludvigson_ng_2009/: README.md
references/: README.md
scripts/: fetch_jsda.py
src/fi_research/: __init__.py  env.py  paths.py
src/fi_research/catalog/: __init__.py  __main__.py  introspect.py  meta.py  render.py
(+26 files in other folders)
