[project]
name = "fi-research"
version = "0.0.1"
description = "Fixed income research codebase — public-data only (no employer / vendor data)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Takumi Arai", email = "takumi.arai2@gmail.com" }]

# Lower bounds match what's installed in the user's anaconda base env so
# `pip install -e .` does not force-upgrade core libs. Bump as needed.
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "pyarrow>=10",
  "pyyaml>=6.0",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "matplotlib>=3.6",
  "jupyterlab>=3.5",
  "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fi_research"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # let formatter handle long lines
